# sostronk

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  compare_teams.cpp  compare_teams.h  main.cpp  main.h  matchmake.cpp  matchmake.h  trimmer.cpp  trimmer.h
src/: CMakeLists.txt  compare_teams.h  main.cpp  matchmake.cpp  matchmake.h  trimmer.cpp  trimmer.h
test/: CMakeLists.txt  boundary_value_test.cpp  boundary_value_test.h  compare_teams_test.cpp  compare_teams_test.h  matchmake_test.cpp  matchmake_test.h  ncr_test.cpp  ncr_test.h  trimmer_test.cpp  trimmer_test.h
